--- a/package.ini
+++ b/package.ini
@@ -1,7 +1,7 @@
 [package]
 name = Roller
-version = 0.0.2
-desc = 
+version = 1.0.0
+desc = A flexible PHP router for PHP5.3
 channel = pear.corneltek.com
 author = Yo-An Lin <cornelius.howl@gmail.com>
 
