--- a/package.ini
+++ b/package.ini
@@ -4,6 +4,7 @@ version = 1.0.1
 desc = A flexible PHP router for PHP5.3
 channel = pear.corneltek.com
 author = Yo-An Lin <cornelius.howl@gmail.com>
+stability = stable
 
 [require]
 pear.corneltek.com/Universal = 0
