separate apc router tests for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ php:
 
 before_script:
   - phpenv rehash
-  - "pyrus upgrade -f -p pear2.php.net/PEAR2_Pyrus_Developer"
-  - pyrus channel-discover pear.corneltek.com
-  - pyrus install corneltek/PHPUnit_TestMore
+# - "pyrus upgrade -f -p pear2.php.net/PEAR2_Pyrus_Developer"
+#  - pyrus channel-discover pear.corneltek.com
+#  - pyrus install corneltek/PHPUnit_TestMore
   - curl http://install.onionphp.org/ | bash
   - curl -O https://raw.github.com/c9s/Onion/master/onion
   - php onion bundle
