Build package.xml at 2012-02-29

--- a/package.ini
+++ b/package.ini
@@ -7,5 +7,7 @@ author = Yo-An Lin <cornelius.howl@gmail.com>
 stability = stable
 
 [require]
+php = 5.3
+pearinstaller = 1.4
 pear.corneltek.com/Universal = 0
 pear.corneltek.com/PHPUnit_TestMore = 0
