--- a/package.ini
+++ b/package.ini
@@ -1,7 +1,7 @@
 [package]
 name = Roller
 version = 1.2.1
-desc = A flexible PHP router for PHP5.3
+desc = A flexible, high-performance PHP router for PHP5.3+
 channel = pear.corneltek.com
 author = Yo-An Lin <cornelius.howl@gmail.com>
 stability = stable
