--- a/package.ini
+++ b/package.ini
@@ -1,10 +1,10 @@
 [package]
 name = Roller
-version = 1.2.10
+version = 1.3.0
 desc = A flexible, high-performance PHP router for PHP5.3+
 channel = pear.corneltek.com
 author = Yo-An Lin <cornelius.howl@gmail.com>
-stability = stable
+stability = beta
 
 [require]
 php = 5.3
