--- a/package.xml
+++ b/package.xml
@@ -10,26 +10,27 @@
     <email>cornelius.howl@gmail.com</email>
     <active>yes</active>
   </lead>
-  <date>2012-03-04</date>
-  <time>13:15:28</time>
+  <date>2012-03-11</date>
+  <time>06:08:33</time>
   <version>
-    <release>1.2.9</release>
-    <api>1.2.9</api>
+    <release>1.3.0</release>
+    <api>1.3.0</api>
   </version>
   <stability>
-    <release>stable</release>
-    <api>stable</api>
+    <release>beta</release>
+    <api>beta</api>
   </stability>
   <license>PHP</license>
   <notes>-</notes>
   <contents>
     <dir name="/">
       <file name="tests/bootstrap.php" role="test" md5sum="b805c1c4ad52d54cb97ceef8f42e13bb"/>
+      <file name="tests/ExtensionTest.php" role="test" md5sum="77cb51f42fe7d97a6304b9c0d677f351"/>
       <file name="tests/RESTfulTest.php" role="test" md5sum="48a301816befeab51b964db3baa7d273"/>
       <file name="tests/Roller/Dumper/ConsoleDumperTest.php" role="test" md5sum="2beda835f820ac3e82414eac7f86c369"/>
       <file name="tests/Roller/RouteCompilerTest.php" role="test" md5sum="f3e5a873bb2dd1e43ba053d2a03e2f1a"/>
       <file name="tests/Roller/RouterApcTest.php" role="test" md5sum="d28016eae7d1a28eb7be3778d78b35f4"/>
-      <file name="tests/Roller/RouterTest.php" role="test" md5sum="6f5bfe04c0f650fa336bc57f60affae8"/>
+      <file name="tests/Roller/RouterTest.php" role="test" md5sum="3a2e9fc5e3d964f744c988432a27ee1c"/>
       <file name="tests/Roller/RouteSetTest.php" role="test" md5sum="c9272106ff8e718f5fd461a397287014"/>
       <file name="src/Roller/ClosureSerializer.php" role="php" md5sum="7956d38e0e58c2f5c59a469777e8d1bc"/>
       <file name="src/Roller/Controller.php" role="php" md5sum="c8739c9b159310e04b6ae59925d8e274"/>
@@ -45,9 +46,10 @@
       <file name="src/Roller/PluginInterface.php" role="php" md5sum="e18eacc88ca940293cb510bcd6806eb6"/>
       <file name="src/Roller/RouteCompiler.php" role="php" md5sum="0d7843927b3c8686a492bd3519ab6d84"/>
       <file name="src/Roller/Router.php" role="php" md5sum="0ae038583fcaa4c22bac5c0d9a1389b7"/>
-      <file name="src/Roller/RouteSet.php" role="php" md5sum="4cae4eba6d2a044a3045c68f7bf86438"/>
-      <file name="CHANGES.md" role="doc" md5sum="bb155740d538ffefa1a7bea03ead44f5"/>
-      <file name="README.md" role="doc" md5sum="b5789e274c073fdd749228d1f95c22b6"/>
+      <file name="src/Roller/RouteSet.php" role="php" md5sum="7512894b79111a24b9db7cf5838019ab"/>
+      <file name="CHANGES.md" role="doc" md5sum="fccbafddd6c60e2e1726129e514e3c84"/>
+      <file name="README.md" role="doc" md5sum="9b9447fae723e4f8922cc7002a07465c"/>
+      <file name="notes.md" role="doc" md5sum="d41d8cd98f00b204e9800998ecf8427e"/>
     </dir>
   </contents>
   <dependencies>
@@ -73,6 +75,7 @@
   <phprelease>
     <filelist>
       <install name="tests/bootstrap.php" as="bootstrap.php"/>
+      <install name="tests/ExtensionTest.php" as="ExtensionTest.php"/>
       <install name="tests/RESTfulTest.php" as="RESTfulTest.php"/>
       <install name="tests/Roller/Dumper/ConsoleDumperTest.php" as="Roller/Dumper/ConsoleDumperTest.php"/>
       <install name="tests/Roller/RouteCompilerTest.php" as="Roller/RouteCompilerTest.php"/>
@@ -96,6 +99,7 @@
       <install name="src/Roller/RouteSet.php" as="Roller/RouteSet.php"/>
       <install name="CHANGES.md" as="CHANGES.md"/>
       <install name="README.md" as="README.md"/>
+      <install name="notes.md" as="notes.md"/>
     </filelist>
   </phprelease>
 </package>
