Add Annotation route test

--- a/package.ini
+++ b/package.ini
@@ -11,6 +11,7 @@ php = 5.3
 pearinstaller = 1.4
 pear.corneltek.com/Universal = 0
 pear.corneltek.com/PHPUnit_TestMore = 0
+pear.doctrine-project.org/DoctrineCommon = 0
 
 [roles]
 *.md = doc
