--- a/build.xml
+++ b/build.xml
@@ -127,7 +127,7 @@
         <available file="package.ini"/>
         <then>
             <exec executable="onion" failonerror="true">
-                <arg value="-d"/>
+                <arg value="-q"/>
                 <arg value="bundle"/>
             </exec>
         </then>
