--- a/package.xml
+++ b/package.xml
@@ -10,8 +10,8 @@
     <email>cornelius.howl@gmail.com</email>
     <active>yes</active>
   </lead>
-  <date>2012-04-24</date>
-  <time>23:25:26</time>
+  <date>2012-06-14</date>
+  <time>17:56:07</time>
   <version>
     <release>1.8.1</release>
     <api>1.8.1</api>
@@ -25,32 +25,33 @@
   <contents>
     <dir name="/">
       <file name="tests/bootstrap.php" role="test" md5sum="b805c1c4ad52d54cb97ceef8f42e13bb"/>
-      <file name="tests/ExtensionTest.php" role="test" md5sum="77cb51f42fe7d97a6304b9c0d677f351"/>
-      <file name="tests/RESTfulTest.php" role="test" md5sum="e1490e7abc06a64d0bfcbb5a33a15cab"/>
+      <file name="tests/ExtensionTest.php" role="test" md5sum="8c1d3357b57f19409aa7f3123fa2648d"/>
+      <file name="tests/RESTfulTest.php" role="test" md5sum="1250f55c75d718a3e2c75663f247bfa2"/>
       <file name="tests/Roller/Annotation/ClassReaderTest.php" role="test" md5sum="8d67c46483bc048bd8a5530b9f1b2d57"/>
       <file name="tests/Roller/Dumper/ConsoleDumperTest.php" role="test" md5sum="2beda835f820ac3e82414eac7f86c369"/>
       <file name="tests/Roller/RouteCompilerTest.php" role="test" md5sum="dd428eddb11f4f48f01702162b6f090d"/>
-      <file name="tests/Roller/RouterApcTest.php" role="test" md5sum="22ad60b21c04df2f839525bc9142711b"/>
-      <file name="tests/Roller/RouterTest.php" role="test" md5sum="3a2e9fc5e3d964f744c988432a27ee1c"/>
-      <file name="tests/Roller/RouteSetTest.php" role="test" md5sum="c9272106ff8e718f5fd461a397287014"/>
+      <file name="tests/Roller/RouterApcTest.php" role="test" md5sum="1e964d55a69c6893e2f681512e4950da"/>
+      <file name="tests/Roller/RouterTest.php" role="test" md5sum="bd007a6be65a6d6e32b1c14b836aa26d"/>
+      <file name="tests/Roller/RouteSetTest.php" role="test" md5sum="367837b2609059cbd99952d346a144b0"/>
       <file name="src/Roller/Annotations/Route.php" role="php" md5sum="f829a5ade6dc9ce52edbc5212846d3a2"/>
       <file name="src/Roller/ClosureSerializer.php" role="php" md5sum="7956d38e0e58c2f5c59a469777e8d1bc"/>
-      <file name="src/Roller/Controller.php" role="php" md5sum="d768332f740ba63a07c6c9d54243b072"/>
+      <file name="src/Roller/Controller.php" role="php" md5sum="0687d75ad7a5c38fb3af5cc7103cc8ff"/>
+      <file name="src/Roller/DSL.php" role="php" md5sum="a1cb75d1c222997beedef7458cbee50f"/>
       <file name="src/Roller/Dumper/ConsoleDumper.php" role="php" md5sum="eb6415684ac8965c9fd11c07b3f8918d"/>
       <file name="src/Roller/Dumper/PhpDumper.php" role="php" md5sum="525e37836f76b5ecf28054ebb23b7926"/>
       <file name="src/Roller/Exception/RouteException.php" role="php" md5sum="c2821b1a76753aea22e11c5e7b310873"/>
       <file name="src/Roller/Exception/RouterException.php" role="php" md5sum="47f7624f9454e42c11b5e1f9afe54365"/>
-      <file name="src/Roller/MatchedRoute.php" role="php" md5sum="d3c3840c31046b911f4320377be3a936"/>
+      <file name="src/Roller/MatchedRoute.php" role="php" md5sum="b70657d3a2fd3dc75e1ff2864d3b6d8c"/>
       <file name="src/Roller/Plugin/RESTful/BaseHandler.php" role="php" md5sum="391866205e412dd709939c87ad7c93de"/>
-      <file name="src/Roller/Plugin/RESTful/GenericHandler.php" role="php" md5sum="4faec8e5a76a04443f6964ffd8863c7d"/>
-      <file name="src/Roller/Plugin/RESTful/ResourceHandler.php" role="php" md5sum="0e02114e56c2391803b23f60933e7329"/>
+      <file name="src/Roller/Plugin/RESTful/GenericHandler.php" role="php" md5sum="c83f97b041cce6e7d8b7f22e26b5ff7b"/>
+      <file name="src/Roller/Plugin/RESTful/ResourceHandler.php" role="php" md5sum="78a9bcb90a6ec8d70e81f46fa0e1e1c8"/>
       <file name="src/Roller/Plugin/RESTful.php" role="php" md5sum="a4f59aedb1c049d6acf0a17f1c0e178e"/>
       <file name="src/Roller/PluginInterface.php" role="php" md5sum="e18eacc88ca940293cb510bcd6806eb6"/>
-      <file name="src/Roller/RouteCompiler.php" role="php" md5sum="e26fbc57f35653649136631b4531a77f"/>
-      <file name="src/Roller/Router.php" role="php" md5sum="626c59364eeeb8f949ad6940ffcce82c"/>
-      <file name="src/Roller/RouteSet.php" role="php" md5sum="35e38c66a9c1422df3fab66295d9d006"/>
+      <file name="src/Roller/RouteCompiler.php" role="php" md5sum="bf2b49aa33f869d15f975343c1def8c6"/>
+      <file name="src/Roller/Router.php" role="php" md5sum="9e28426f0c9ac7eb794a2f038307183a"/>
+      <file name="src/Roller/RouteSet.php" role="php" md5sum="de8af8eee798ab9a1eb11b71ee03b8df"/>
       <file name="CHANGES.md" role="doc" md5sum="fccbafddd6c60e2e1726129e514e3c84"/>
-      <file name="README.md" role="doc" md5sum="f0980abf3f3cfe7f9343144803c7850b"/>
+      <file name="README.md" role="doc" md5sum="936364f1d5927dc625735739e47a7f30"/>
       <file name="notes.md" role="doc" md5sum="d41d8cd98f00b204e9800998ecf8427e"/>
     </dir>
   </contents>
@@ -98,6 +99,7 @@
       <install name="src/Roller/Annotations/Route.php" as="Roller/Annotations/Route.php"/>
       <install name="src/Roller/ClosureSerializer.php" as="Roller/ClosureSerializer.php"/>
       <install name="src/Roller/Controller.php" as="Roller/Controller.php"/>
+      <install name="src/Roller/DSL.php" as="Roller/DSL.php"/>
       <install name="src/Roller/Dumper/ConsoleDumper.php" as="Roller/Dumper/ConsoleDumper.php"/>
       <install name="src/Roller/Dumper/PhpDumper.php" as="Roller/Dumper/PhpDumper.php"/>
       <install name="src/Roller/Exception/RouteException.php" as="Roller/Exception/RouteException.php"/>
