--- a/package.ini
+++ b/package.ini
@@ -4,7 +4,7 @@ version = 1.9.0
 desc = A flexible, high-performance PHP router for PHP5.3+
 channel = pear.corneltek.com
 author = Yo-An Lin <cornelius.howl@gmail.com>
-stability = stable
+stability = beta
 
 [require]
 php = 5.3
