--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ php:
 before_script:
   - phpenv rehash
 # - "pyrus upgrade -f -p pear2.php.net/PEAR2_Pyrus_Developer"
-#  - pyrus channel-discover pear.corneltek.com
-#  - pyrus install corneltek/PHPUnit_TestMore
-  - curl http://install.onionphp.org/ | bash
+  - pyrus channel-discover pear.corneltek.com
+  - pyrus install corneltek/PHPUnit_TestMore
+  - pyrus install corneltek/Universal
   - curl -O https://raw.github.com/c9s/Onion/master/onion
-  - php onion bundle
+  - php onion install
 
 script: phpunit
