--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
-    "name": "c9s/roller",
-    "homepage": "http://github.com/c9s/Roller",
+    "name": "corneltek/roller",
+    "homepage": "http://github.com/c9s/php-Roller",
     "description": "High performance PHP router",
     "require": {
         "php": ">=5.3.0"
     },
-    "license": "BSD",
+    "license": "BSD-3-Clause",
     "authors": [
         {
             "name": "Yo-An Lin",
@@ -13,5 +13,5 @@
             "homepage": "http://c9s.me"
         }
     ],
-    "autoload": { "psr-0": { "Roller": "src" } }
+    "autoload": { "psr-0": { "Roller": "src/" } }
 }
