--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,12 @@
     "homepage": "http://github.com/c9s/php-Roller",
     "description": "High performance PHP router",
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.3.0",
+        "doctrine/common": "~2.3"
+    },
+    "require-dev": {
+        "corneltek/phpunit-testmore": "dev-master",
+        "corneltek/serializerkit": "dev-master"
     },
     "license": "BSD-3-Clause",
     "authors": [
