--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,11 @@ php:
 
 before_script:
   - phpenv rehash
-# - "pyrus upgrade -f -p pear2.php.net/PEAR2_Pyrus_Developer"
-  - pyrus channel-discover pear.corneltek.com
-  - pyrus install corneltek/PHPUnit_TestMore
-  - pyrus install corneltek/Universal
+  - pear channel-discover pear.corneltek.com
+  - pear channel-discover components.ez.no
+  - pear install -a ezc/ConsoleTools
   - curl -O https://raw.github.com/c9s/Onion/master/onion
   - php onion install
+  - composer install --dev
 
 script: phpunit
