--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,11 @@
     "description": "High performance PHP router",
     "require": {
         "php": ">=5.3.0",
-        "doctrine/common": "~2.3"
+        "doctrine/common": "~2.3",
+        "corneltek/serializerkit": "~1.0"
     },
     "require-dev": {
-        "corneltek/phpunit-testmore": "dev-master",
-        "corneltek/serializerkit": "dev-master"
+        "corneltek/phpunit-testmore": "dev-master"
     },
     "license": "BSD-3-Clause",
     "authors": [
