--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "High performance PHP router",
     "require": {
         "php": ">=5.3.0",
-        "doctrine/common": "~2.3",
+        "doctrine/common": "2.3.*",
         "corneltek/serializerkit": "~1.0"
     },
     "require-dev": {
