--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,27 @@
 {
-    "name": "corneltek/roller",
-    "homepage": "http://github.com/c9s/php-Roller",
+    "name": "corneltek\/roller",
+    "homepage": "http:\/\/github.com\/c9s\/php-Roller",
     "description": "High performance PHP router",
     "require": {
         "php": ">=5.3.0",
-        "doctrine/common": "~2.3",
-        "corneltek/serializerkit": "~1"
+        "doctrine\/common": "~2.3",
+        "corneltek\/serializerkit": "~1"
     },
     "require-dev": {
-        "corneltek/phpunit-testmore": "dev-master"
+        "corneltek\/phpunit-testmore": "dev-master"
     },
     "license": "BSD-3-Clause",
     "authors": [
         {
             "name": "Yo-An Lin",
             "email": "cornelius.howl@gmail.com",
-            "homepage": "http://c9s.me"
+            "homepage": "http:\/\/c9s.me"
         }
     ],
-    "autoload": { "psr-0": { "Roller": "src" } }
+    "autoload": {
+        "psr-0": {
+            "Roller": "src"
+        }
+    },
+    "version": "1.9.1"
 }
